contractors first heart beat

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -167,14 +167,14 @@
 
           <div class="row">
             <table class="table" id="job-foundation-list-table">
-              <thead><tr><th>Id</th><th>Foundation</th><th>Script</th><th>State</th><th>Last Update</th></tr></thead>
+              <thead><tr><th>Id</th><th>Script Name</th><th>Foundation</th><th>% complete</th><th>State</th><th>Last Update</th></tr></thead>
               <tbody/>
             </table>
           </div>
 
           <div class="row">
             <table class="table" id="job-structure-list-table">
-              <thead><tr><th>Id</th><th>Structure</th><th>Script</th><th>State</th><th>Last Update</th></tr></thead>
+              <thead><tr><th>Id</th><th>Script Name</th><th>Structure</th><th>% complete</th><th>State</th><th>Last Update</th></tr></thead>
               <tbody/>
             </table>
           </div>
