now with config  values

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div id="object-detail-dialog" class="modal fade" role="dialog">
+  <div id="object-detail-dialog" class="modal" role="dialog">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
