now with jobs, addressblock

--- a/www/react-ui/src/www/index.html
+++ b/www/react-ui/src/www/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Contractor</title>
-    <meta name="description" content="Contractor.">
-    <meta name="author" content="Peter  Howe">
+    <meta name="description" content="Contractor">
+    <meta name="author" content="Peter Howe">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)">
     <meta name="apple-mobile-web-app-title" content="Material Console">
