--- a/ui/src/www/index.html
+++ b/ui/src/www/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <div id="app"></div>
-    <script src="env.js"></script>
-    <script src="bundle.js"></script>
+    <script src="/env.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
